Button wraps via css, not html
Former-commit-id: 960963f17a97e5efe9b72f6ea848b5cb4aeefcd1

--- a/templates/filters.html
+++ b/templates/filters.html
@@ -86,7 +86,7 @@
 
                     </div>
                     <button id="filter_submit" type="submit" class="btn btn-primary" name="add"
-                            value="add">{% trans "Add<br>Filter" %}</button>
+                            value="add">{% trans "Add Filter" %}</button>
 
 
                 </div>
