--- a/landmatrix/static/css/content.css
+++ b/landmatrix/static/css/content.css
@@ -2052,6 +2052,8 @@ a.remove-ybd:hover {
 }
 
 #filter_submit {
+    word-wrap: break-word;
+    white-space: normal;
     padding-top: 3px;
     padding-bottom: 3px;
 }
@@ -2061,10 +2063,13 @@ a.remove-ybd:hover {
     margin-right: 10px;
 }
 
-
+#filter_value .bootstrap-datetimepicker-widget {
+    display: inline-block !important;
+}
 
 #filter_value > ul:nth-child(1) {
     overflow-y: auto;
+    max-width: 100%;
     height: 160px;
 }
 
