Fixed missing line in filter controlbox
Former-commit-id: 58a096ecf14d011571cbd8e2f07bf953879158e8

--- a/landmatrix/static/css/content.css
+++ b/landmatrix/static/css/content.css
@@ -2040,6 +2040,7 @@ a.remove-ybd:hover {
 
     .filtervaluebox {
         border-top: none !important;
+        border-bottom: none !important;
         height: auto; /* 300px; */
     }
 
@@ -2090,7 +2091,7 @@ a.remove-ybd:hover {
     overflow-x: auto;
 }
 
-.filterbox:first-child {
+.presetbox {
     border-left: none;
 }
 
