--- a/templates/filters.html
+++ b/templates/filters.html
@@ -31,7 +31,7 @@
 
     <div id="manage-filters" class="clearfix collapse">
         <div id="filterrow" class="row">
-            <div class="col-md-3 filterbox no-pad">
+            <div class="col-md-3 filterbox presetbox no-pad">
                 <ul class="presets variables">
                     {% for groupname, items in presets.items %}
                         <li>
