Removed start view
Former-commit-id: b6bf78aa59bfa3534c4cd716d7cd02e12588dc74

--- a/grid/templates/group-by.html
+++ b/grid/templates/group-by.html
@@ -7,7 +7,7 @@
 
 {% block breadcrumb %}
 <ul class="breadcrumb">
-  <li><a href="{% url 'start' %}">{% trans 'Home' %}</a></li>
+  <li><a href="/">{% trans 'Home' %}</a></li>
   <li><a href="{% url 'app_main' %}">{% trans 'Global' %}</a></li>
   {% if group == "all" %}
   <li>{{ name|capfirst }}</li>
