--- a/grid/templates/global_base.html
+++ b/grid/templates/global_base.html
@@ -75,7 +75,7 @@
 
 {% block breadcrumb %}
 <ul class="breadcrumb">
-	<li><a href="{% url 'start' %}">{% trans 'Home' %}</a></li>
+	<li><a href="/">{% trans 'Home' %}</a></li>
 	<li>{% trans 'Global' %}</li>
 </ul>
 {% endblock %}
