--- a/templates/base.html
+++ b/templates/base.html
@@ -99,9 +99,9 @@
                         </ul>
                     </li>
                     {% include "language_chooser.html" %}
+                    {% block user_tools %}{% endblock %}
                 </ul>
             </div>
-            {% block user_tools %}{% endblock %}
         </div>
     </div>
 
@@ -255,7 +255,7 @@
             region_request.then(function (data) {
               for (var d = 0; d < data.length; d++) {
                 var item = data[d];
-                var option = new Option(item[1], item[0], true, true);
+                var option = new Option(item[2], item[1], false, false);
                 region_select.append(option);
               }
               //$element.trigger('change');
@@ -272,7 +272,7 @@
             country_request.then(function (data) {
               for (var d = 0; d < data.length; d++) {
                 var item = data[d];
-                var option = new Option(item[1], item[0], true, true);
+                var option = new Option(item[2], item[1], false, false);
                 country_select.append(option);
               }
               //$element.trigger('change');
