Initial proof of concept for PDF download of charts
Former-commit-id: 45151dad14edcf20c53fbc1de6757a07735eb1fa

--- a/templates/export.html
+++ b/templates/export.html
@@ -51,4 +51,9 @@
   {% endif %}
     <i class=""></i>XSL
   </a>
+  {% if view == "chart view" %}{# TODO: not this, maybe context with export formats as suggested in comment above #}
+  <a class="btn-media pdf">
+      <i class=""></i>PDF
+  </a>
+  {% endif %}
 </span>
