--- a/editor/templates/manage.html
+++ b/editor/templates/manage.html
@@ -9,6 +9,20 @@
 {% block page_title %}{% trans "Manage deals" %}{% endblock %}
 {% block title %}{% trans "Manage deals" %}{% endblock %}
 
+{% block user_tools %}
+<li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+       aria-expanded="false" title="{% trans "Logged in as" %}: {{ user }}"><i class="fa fa-user messages"></i></a>
+    <ul class="dropdown-menu">
+        <li><a href="{% url 'manage' %}">{% trans "Manage" %}</a></li>
+        <li><a href="{% url 'logout' %}">{% trans "Logout" %}</a></li>
+    </ul>
+</li>
+{% endblock %}
+
+{% block subnav %}
+{% endblock %}
+
 {% block content %}
     <script type="text/javascript">
         $(document).ready(function () {
