--- a/templates/base.html
+++ b/templates/base.html
@@ -82,20 +82,20 @@
                                 class="caret"></span></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="{% url 'add_deal' %}">{% trans "Report a deal" %}</a></li>
-                            <li><a href="{% url 'contact' %}">{% trans "Get in touch" %}</a></li>
-                            <li><a href="{% url 'download' %}">{% trans "Download" %}</a></li>
+                            <li><a href="{% slugurl 'contact' %}">{% trans "Get in touch" %}</a></li>
+                            <li><a href="{% slugurl 'download' %}">{% trans "Download" %}</a></li>
                         </ul>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{% url 'help' %}" role="button"><span class="nav-circle nav-help">?</span></a></li>
+                    <li><a href="{% slugurl 'help' %}" role="button"><span class="nav-circle nav-help">?</span></a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false"><i class="fa lm-envelope messages"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{% url 'blog' %}">{% trans "Blog" %}</a></li>
-                            <li><a href="{% url 'newsletter' %}">{% trans "Newsletter" %}</a></li>
-                            <li><a href="{% url 'publications' %}">{% trans "Publications" %}</a></li>
+                            <li><a href="{% slugurl 'news' %}">{% trans "News" %}</a></li>
+                            <li><a href="{% slugurl 'newsletter' %}">{% trans "Newsletter" %}</a></li>
+                            <li><a href="{% slugurl 'publications' %}">{% trans "Publications" %}</a></li>
                         </ul>
                     </li>
                     {% include "language_chooser.html" %}
