--- a/templates/wagtailcms/country.html
+++ b/templates/wagtailcms/country.html
@@ -1,19 +1,1 @@
-{% extends "base.html" %}
-
-{% load wagtailcore_tags %}
-{% load wagtailuserbar %}
-
-{% block body_class %}template-homepage{% endblock %}
-
-{% block extra_messages %}
-    {% wagtailuserbar %}
-{% endblock %}
-
-{% block title %}
-    {{ page.title }}
-{% endblock %}
-
-{% block content %}
-    {{ page.body }}
-{% endblock %}
-
+{% extends "wagtailcms/wagtail_page.html" %}
