Filter selects should be 100% height
Former-commit-id: c5772dd8a90aadf2a8c21ded9328e399c1196bb4

--- a/landmatrix/static/css/content.css
+++ b/landmatrix/static/css/content.css
@@ -2147,6 +2147,11 @@ a.remove-ybd:hover {
     height: 1.5em;
 }
 
+#filter_value,
+#filter_value > select {
+    height: 100%;
+}
+
 .form-horizontal .checkbox,
 .form-horizontal .radio {
     padding-top: 0;
