Presetlinks without labels
Former-commit-id: 3de59743eb8a031966f0480ab56a8e38bb34b5fe

--- a/templates/filters.html
+++ b/templates/filters.html
@@ -41,7 +41,7 @@
                                     <li class="filter_item">
                                         <a href="javascript:loadPreset('{{ item.id }}')"
                                            title="{{ groupname }}: {{ item.label }}">
-                                            <label>{% trans item.label %}</label>
+                                            {% trans item.label %}
                                         </a>
                                     </li>
                                 {% endfor %}
