--- a/grid/templates/global_base.html
+++ b/grid/templates/global_base.html
@@ -13,6 +13,7 @@
 
     <!-- Landmatrix Grid libraries -->
     <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "js/editor/stakeholder.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
     {% block global_head %}
     {% endblock %}
