--- a/grid/templates/stakeholder.html
+++ b/grid/templates/stakeholder.html
@@ -90,40 +90,6 @@
 {% endblock %}
 
 {% block js %}
-<script src="{% static "js/editor/jquery.formset.custom.js" %}" type="text/javascript" charset="utf-8"></script>
-<script type="text/javascript">
-function init_form(form) {
-    // Init buttons
-    form.find('.add-form').click(function () {
-        $(this).parents('.row').find('.formset-add-form').trigger('click');
-    });
-    form.find('.remove-form').click(function () {
-        form.find('.formset-remove-form').trigger('click');
-    });
-    form.find('select').select2();
-}
-$(document).ready(function () {
-    $('.country select').select2();
-    $('.parent-stakeholder-form').formset({
-        prefix: 'parent-stakeholder-form',
-        addText: '<i class="fa fa-plus"></i> {% trans "Add another" %}',
-        addCssClass: 'formset-add-form hidden',
-        deleteText: '<i class="fa fa-minus"></i> {% trans "Remove" %}',
-        deleteCssClass: 'formset-remove-form hidden',
-        added: function (row) {
-            init_form(row);
-        }
-    }).each(function () { init_form($(this)); });
-    $('.parent-investor-form').formset({
-        prefix: 'parent-investor-form',
-        addText: '<i class="fa fa-plus"></i> {% trans "Add another" %}',
-        addCssClass: 'formset-add-form hidden',
-        deleteText: '<i class="fa fa-minus"></i> {% trans "Remove" %}',
-        deleteCssClass: 'formset-remove-form hidden',
-        added: function (row) {
-            init_form(row);
-        },
-    }).each(function () { init_form($(this)); });
-});
-</script>
+    <script src="{% static "js/editor/jquery.formset.custom.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "js/editor/stakeholder.js" %}" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
