--- a/templates/export.html
+++ b/templates/export.html
@@ -51,8 +51,8 @@
   {% endif %}
     <i class=""></i>XSL
   </a>
-  {% if view == "chart view" %}{# TODO: not this, maybe context with export formats as suggested in comment above #}
-  <a class="btn-media pdf">
+  {% if 'PDF' in export_formats and pdf_chart_url %}
+  <a class="btn-media pdf" href="{% url pdf_chart_url %}">
       <i class=""></i>PDF
   </a>
   {% endif %}
