--- a/landmatrix/static/css/map.scss
+++ b/landmatrix/static/css/map.scss
@@ -16,7 +16,7 @@
 
 .popover-title {
     background-color: #f7f7f7;
-    border-bottom: 1px solid #ebebeb;
+    border-bottom: 1px solid $lm_light;
     border-radius: 5px 5px 0 0;
     margin: 0;
     padding: 8px 14px;
@@ -138,7 +138,7 @@ div.layer-group > a:hover {
 
 .layer-switcher .panel,
 #legend .panel {
-    background-color: #fcfcfc;
+    background-color: $lm_offwhite;
     border: none !important;
     padding-left: 10px;
     padding-top: 10px;
@@ -147,7 +147,7 @@ div.layer-group > a:hover {
 .ol-control,
 .ol-control:focus,
 .ol-control:hover {
-    background-color: #fcfcfc;
+    background-color: $lm_offwhite;
 }
 
 #search-location > form > div > i {
