Not sure IF it helps, but those ARE in fact dropdowns
Former-commit-id: c627c6ccdd5ee48cbc879fa8b171208500383e94

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,14 +63,14 @@
                     <li>
                         <a href="{% url 'map' %}"><i class="lm-nav lm-globe"></i><span class="nav-text">{% trans 'Global' %}</span></a>
                     </li>
-                    <li>
+                    <li class="dropdown">
                         <span>
                             <i class="lm-nav lm-regions"></i>
                             <select class="nav-select" id="nav-region-select">
                             </select>
                         </span>
                     </li>
-                    <li>
+                    <li class="dropdown">
                         <span>
                             <i class="lm-nav lm-flag"></i>
                             <select class="nav-select" id="nav-country-select">
