--- a/landmatrix/static/css/widgets.scss
+++ b/landmatrix/static/css/widgets.scss
@@ -380,3 +380,11 @@ h4 .icon {
   width: 400px;
   height: 300px;
 }
+
+/* ==========================================================================
+ *    DATETIMEPICKER
+ * ========================================================================== */
+
+.bootstrap-datetimepicker-widget table th {
+  border-radius: 0px !important;
+}
