Ouch, linkfix - check for similar bugs initiated.
Former-commit-id: c14fcf967c024804c23648b617e34ec331cab65d

--- a/grid/templates/all_deals.html
+++ b/grid/templates/all_deals.html
@@ -271,7 +271,7 @@
                         {% for column in columns %}
                             {% if column == "deal_id" %}
                                 <td class="deal-id">
-                                    <a href="{% url 'deal_detail' item.deal_id %}/">{{ item.deal_id }}</a>
+                                    <a href="{% url 'deal_detail' item.deal_id %}">{{ item.deal_id }}</a>
                                 </td>
                             {% elif column == "crop" %}
                                 <td style="width:341px">
