--- a/grid/templates/deal-comparison.html
+++ b/grid/templates/deal-comparison.html
@@ -10,8 +10,8 @@
 
 {% block breadcrumb_inner %}
     <li><a href="{% url 'app_main' %}">{% trans 'Global' %}</a></li>
-    <li><a href="/deal/{{ deal.activity_id }} %}">{% trans "Deal Details" %}</a></li>
-  <li><a href="/deal/compare/{{ deal.activity_id }}_foobar">{% trans "Compare deal history" %}</a></li>
+    <li><a href="{% url 'deal_details' deal_id=deal.activity_id %}">{% trans "Deal Details" %}</a></li>
+  <li>{% trans "Compare deal history" %}</li>
 {% endblock %}
 
 
