Debug code for some issues
Former-commit-id: d52c2232aebfcc251fa463c481bc574856dca958

--- a/grid/templates/includes/dealpanels.html
+++ b/grid/templates/includes/dealpanels.html
@@ -38,6 +38,7 @@
                         if (map) {
                             var formId = form.find('h3 small').text().replace('#', ''),
                                 mapId = form.attr('class') + '-' + formId;
+                            console.log("Ahoi: ", mapId);
                             map.attr('id', 'map-' + mapId);
                             initializeMap(mapId);
                         }
