--- a/editor/templates/dashboard.html
+++ b/editor/templates/dashboard.html
@@ -14,7 +14,7 @@
 {% block user_tools %}
 <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-       aria-expanded="false" title="{% trans "Logged in as" %}: {{ user }}"><i class="fa fa-user messages"></i></a>
+       aria-expanded="false" title="{% trans "Logged in as" %}: {{ user }}"><i class="fa fa-user"></i></a>
     <ul class="dropdown-menu">
         <li><a href="{% url 'manage' %}">{% trans "Manage" %}</a></li>
         <li><a href="{% url 'logout' %}">{% trans "Logout" %}</a></li>
