--- a/landmatrix/static/css/nav.scss
+++ b/landmatrix/static/css/nav.scss
@@ -107,7 +107,7 @@
     height: 20px;
     text-transform: uppercase;
     display: block;
-    margin-top: 13px;
+    margin-top: 10px;
     border-radius: 50%;
     color: $lm_light;
     text-align: center;
@@ -202,10 +202,11 @@
     padding-right: 10px;
     display: inline-block;
 }
-.messages {
+.navbar-right .fa {
     margin-top: 10px;
     color: $lm_medium2;
     display: block;
+    font-size: 20px;
 }
 
 .lm-nav.lm-regions,
